Upgrade to Spring Boot 3 and Java 21